--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -15,6 +15,8 @@
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "indexd": "quay.io/cdis/indexd:2022.03",
     "jenkins": "quay.io/cdis/jenkins:master",
+    "jenkins-worker": "quay.io/cdis/gen3-qa-worker:master",
+    "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:master",
     "peregrine": "quay.io/cdis/peregrine:2022.03",
     "pidgin": "quay.io/cdis/pidgin:2022.03",
     "portal": "quay.io/cdis/data-portal:2022.03",
