--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -9,9 +9,11 @@
   "versions": {
     "ambassador": "quay.io/datawire/ambassador:1.4.2",
     "arborist": "quay.io/cdis/arborist:master",
+    "argo-wrapper": "quay.io/cdis/argo-wrapper:master",
     "audit-service": "quay.io/cdis/audit-service:master",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
     "awshelper": "quay.io/cdis/awshelper:master",
+    "cohort-middleware": "quay.io/cdis/cohort-middleware:master",
     "fence": "quay.io/cdis/fence:master",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "indexd": "quay.io/cdis/indexd:master",
