--- a/qa-jcoin.planx-pla.net/etlMapping.yaml
+++ b/qa-jcoin.planx-pla.net/etlMapping.yaml
@@ -19,68 +19,69 @@ mappings:
       - path: moud_uses
         props:
           - name: U15
-    nested_props:
-    - name: time_points
-      path: time_points
+
+  - name: jcoin_etl_time_points
+  doc_type: time_point
+  type: aggregator
+  root: time_point         
+  props:
+    - name: days_from_baseline_session
+    - name: visit_name
+    - name: visit_type
+    - name: visit_number
+  parent_props:
+    - path: participants[participant].protocols[protocol,protocol_submitter_id:submitter_id].projects[project_name:name]
+    - path: participants[participant,quarter_recruited,role_in_project]
+  flatten_props:
+    - path: substance_uses
       props:
-        - name: days_from_baseline_session
-        - name: visit_name
-        - name: visit_type
-        - name: visit_number
-      nested_props:
-      - name: substance_uses
-        path: substance_uses
-        props:
-          - name: S3a_category
-          - name: S4a_category
-          - name: S4f_category
-          - name: S4g_category
-          - name: S4h_category
-          - name: S4j_category
-          - name: S1a
-          - name: S1b
-          - name: S2a
-          - name: S2b
-          - name: S2c
-          - name: S3a
-          - name: S3b
-          - name: S4a
-          - name: S4b
-          - name: S4f
-          - name: S4g
-          - name: S4h
-          - name: S4j
-          - name: S4k
-      - name: justice_involvements
-        path: justice_involvements
-        props:
-          - name: J1_category
-          - name: J1a_category
-          - name: J2_category
-          - name: J2a_category
-          - name: J2d_category
-          - name: J3c_and_d_category
-          - name: J5a_category
-          - name: J1
-          - name: J2
-          - name: J3d
-          - name: J3e
-          - name: J3f
-          - name: J4a
-          - name: J4b
-      - name: demographic_households
-        path: demographic_households
-        props:
-          - name: D7a
-          - name: D7c
-          - name: D7d
-          - name: D9a
-      - name: risk_of_harm_and_consequences
-        path: risk_of_harm_and_consequences
-        props:
-          - name: R1d
-          - name: R1g
-        sorted_by: updated_datetime, desc
+        - name: S3a_category
+        - name: S4a_category
+        - name: S4f_category
+        - name: S4g_category
+        - name: S4h_category
+        - name: S4j_category
+        - name: S1a
+        - name: S1b
+        - name: S2a
+        - name: S2b
+        - name: S2c
+        - name: S3a
+        - name: S3b
+        - name: S4a
+        - name: S4b
+        - name: S4f
+        - name: S4g
+        - name: S4h
+        - name: S4j
+        - name: S4k
+    - path: justice_involvements
+      props:
+        - name: J1_category
+        - name: J1a_category
+        - name: J2_category
+        - name: J2a_category
+        - name: J2d_category
+        - name: J3c_and_d_category
+        - name: J5a_category
+        - name: J1
+        - name: J2
+        - name: J3d
+        - name: J3e
+        - name: J3f
+        - name: J4a
+        - name: J4b
+  - path: demographic_households
+    props:
+      - name: D7a
+      - name: D7c
+      - name: D7d
+      - name: D9a
+  - path: risk_of_harm_and_consequences
+    props:
+      - name: R1d
+      - name: R1g
+
   - name: jcoin_file
     doc_type: file
     type: collector
