add project_id and submitter_id to time_point props

--- a/qa-jcoin.planx-pla.net/etlMapping.yaml
+++ b/qa-jcoin.planx-pla.net/etlMapping.yaml
@@ -25,6 +25,8 @@ mappings:
     type: aggregator
     root: time_point         
     props:
+      - name: submitter_id
+      - name: project_id
       - name: days_from_baseline_session
       - name: visit_name
       - name: visit_type
