--- a/qa-jcoin.planx-pla.net/etlMapping.yaml
+++ b/qa-jcoin.planx-pla.net/etlMapping.yaml
@@ -19,17 +19,23 @@ mappings:
       - path: moud_uses
         props:
           - name: U15
-    nested_props:
-    - name: time_points
-      path: time_points
-      props:
-        - name: days_from_baseline_session
-        - name: visit_name
-        - name: visit_type
-        - name: visit_number
-      nested_props:
-      - name: substance_uses
-        path: substance_uses
+
+  - name: jcoin_etl_time_points
+    doc_type: time_point
+    type: aggregator
+    root: time_point         
+    props:
+      - name: submitter_id
+      - name: project_id
+      - name: days_from_baseline_session
+      - name: visit_name
+      - name: visit_type
+      - name: visit_number
+    parent_props:
+      - path: participants.protocols[protocol,protocol_submitter_id:submitter_id].projects[project_name:name]
+      - path: participants[quarter_recruited,role_in_project,current_client_status]
+    flatten_props:
+      - path: substance_uses
         props:
           - name: S3a_category
           - name: S4a_category
@@ -51,8 +57,7 @@ mappings:
           - name: S4h
           - name: S4j
           - name: S4k
-      - name: justice_involvements
-        path: justice_involvements
+      - path: justice_involvements
         props:
           - name: J1_category
           - name: J1a_category
@@ -68,19 +73,17 @@ mappings:
           - name: J3f
           - name: J4a
           - name: J4b
-      - name: demographic_households
-        path: demographic_households
+      - path: demographic_households
         props:
           - name: D7a
           - name: D7c
           - name: D7d
           - name: D9a
-      - name: risk_of_harm_and_consequences
-        path: risk_of_harm_and_consequences
+      - path: risk_of_harm_and_consequences
         props:
           - name: R1d
           - name: R1g
-        sorted_by: updated_datetime, desc
+
   - name: jcoin_file
     doc_type: file
     type: collector
