--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -28,7 +28,7 @@
     "spark": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-spark:2022.05",
     "tube": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/tube:2022.05",
     "wts": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/workspace-token-service:2022.05",
-    "frontend-framework": "quay.io/cdis/frontend-framework:main"
+    "frontend-framework": "quay.io/cdis/frontend-framework:feat_external-footer"
   },
   "arborist": {
     "deployment_version": "2"
