--- a/qa-niaid.planx-pla.net/etlMapping.yaml
+++ b/qa-niaid.planx-pla.net/etlMapping.yaml
@@ -31,6 +31,7 @@ mappings:
       - name: study_registration
       - name: study_registration_id
       - name: required_idp
+      - name: external_url
         
   - name: qa-niaid_ct-file
     doc_type: ctfile
