--- a/qa-ibd.planx-pla.net/manifest.json
+++ b/qa-ibd.planx-pla.net/manifest.json
@@ -170,6 +170,7 @@
     "sync_from_dbgap": "False",
     "dispatcher_job_num": "10",
     "netpolicy": "on",
+    "tier_access_limit": "5",
     "useryaml_s3path": "s3://cdis-gen3-users/qa-ibd/user.yaml",
     "maintenance_mode": "off",
     "lb_type": "internal",
