--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -59,7 +59,7 @@
     "dispatcher_job_num": "10",
     "netpolicy": "on",
     "lb_type": "internal",
-    "frontend_root": "gen3ff"
+    "frontend_root": "portal"
   },
   "canary": {
     "default": 0
