--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -58,8 +58,7 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa-heal/user.yaml",
     "dispatcher_job_num": "10",
     "netpolicy": "on",
-    "lb_type": "internal",
-    "frontend_root": "gen3ff"
+    "lb_type": "internal"
   },
   "canary": {
     "default": 0
