--- a/qa-niaid.planx-pla.net/manifest.json
+++ b/qa-niaid.planx-pla.net/manifest.json
@@ -54,7 +54,7 @@
     "sync_from_dbgap": "False",
     "useryaml_s3path": "s3://cdis-gen3-users/qa-nct/user.yaml",
     "netpolicy": "on",
-    "tier_access_level": "private",
+    "tier_access_level": "libre",
     "public_datasets": true,
     "maintenance_mode": "off",
     "lb_type": "internal"
