--- a/qa-brh.planx-pla.net/manifest.json
+++ b/qa-brh.planx-pla.net/manifest.json
@@ -31,16 +31,16 @@
     "arborist": "true"
   },
   "global": {
-    "environment": "brhdemo",
-    "hostname": "brh.data-commons.org",
+    "environment": "qa-brh",
+    "hostname": "qa-brh.planx-pla.net",
     "revproxy_arn": "arn:aws:acm:us-east-1:707767160287:certificate/c676c81c-9546-4e9a-9a72-725dd3912bc8",
     "dictionary_url": "https://s3.amazonaws.com/dictionary-artifacts/gtexdictionary/4.0.6/schema.json",
     "dispatcher_job_num": "10",
     "portal_app": "gitops",
     "sync_from_dbgap": "False",
-    "kube_bucket": "kube_bucket.devplanetv1.gen3",
-    "logs_bucket": "logs-devplanetv1-gen3",
-    "useryaml_s3path": "s3://cdis-gen3-users/brh/user.yaml",
+    "kube_bucket": "kube-qaplanetv2-gen3",
+    "logs_bucket": "logs-qaplanetv2-gen3",
+    "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "tier_access_level": "regular",
     "tier_access_limit": 50,
     "public_datasets": true,
