change from case_id to _case_id

--- a/jenkins-blood.planx-pla.net/etlMapping.yaml
+++ b/jenkins-blood.planx-pla.net/etlMapping.yaml
@@ -346,6 +346,6 @@ mappings:
     injecting_props:
       case:
         props:
-          - name: case_id
+          - name: _case_id
             src: id
           - name: project_id
