--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -82,6 +82,22 @@
       {
         "index": "jenkins_file_alias",
         "type": "file"
+      },
+      {
+        "index": "jenkins_midrc_dataset_alias",
+        "type": "dataset"
+      },
+      {
+        "index": "jenkins_midrc_case_alias",
+        "type": "case"
+      },
+      {
+        "index": "jenkins_midrc_imaging_data_file_alias",
+        "type": "imaging_data_file"
+      },
+      {
+        "index": "jenkins_midrc_imaging_study_alias",
+        "type": "imaging_study"
       }
     ],
     "config_index": "jenkins_configs_alias",
