--- a/jenkins-new.planx-pla.net/etlMapping.yaml
+++ b/jenkins-new.planx-pla.net/etlMapping.yaml
@@ -75,7 +75,7 @@ mappings:
         path: samples.sequencings
         fn: count
     joining_props:
-      - index: file
+      - index: jenkins-new.planx-pla.net_file
         join_on: _subject_id
         props:
           - name: data_format
