add 'appl_id' to HEAL agg MDS config

--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -13,6 +13,9 @@
                 }
             },
             "commons_url": {},
+            "apple_id": {
+                "type": "string"
+            },
             "tags": {
                 "type": "array"
             },
