--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -13,7 +13,7 @@
                 }
             },
             "commons_url": {},
-            "apple_id": {
+            "appl_id": {
                 "type": "string"
             },
             "tags": {
