Updating Env qa-ibd.planx-pla.net - integration202211 1666100015 (#2234)
* apply version integration202211 to qa-ibd.planx-pla.net

* apply version integration202211 to qa-ibd.planx-pla.net

* Update etlMapping.yaml

* Update etlMapping.yaml

* Update etlMapping.yaml

Co-authored-by: Hara Prasad <haraprasadj@uchicago.edu>

--- a/qa-ibd.planx-pla.net/etlMapping.yaml
+++ b/qa-ibd.planx-pla.net/etlMapping.yaml
@@ -73,6 +73,7 @@ mappings:
     type: aggregator
     root: project
     props:
+      - name: code
       - name: name
       - name: title
       - name: brief_summary
